# rstore

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: main.rs
src/core/: aggregate.rs  command.rs  eventstore.rs  mod.rs
src/core/test/: infrastructure.rs
src/error/: result.rs
src/shopping/: mod.rs  order.rs  order_commands.rs  routes.rs
src/shopping/application/: mod.rs  order_command.rs
src/shopping/domain/: order.rs
src/shopping/test/: integration.rs
