[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
eventstore = "1.0.0"
async-trait = "0.1.52"
uuid = { version = "0.8", features = ["v4"] }